--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
-    "next": "^15.4.6",
+    "next": "14.2.15",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
