--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
+    "lightningcss": "^1.30.1",
     "lucide-react": "^0.540.0",
     "next": "14.2.15",
     "nprogress": "^0.2.0",
